unpackaged/main/default/objects/CMPL123CME__Vigilance__c/CMPL123CME__Vigilance__c.object-meta.xml
<CustomObject>
    <label>Vigilance - Obsolete</label>
    <nameField>
        <displayFormat>V-{0000000}</displayFormat>
        <label>Vigilance No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Vigilances - Obsolete</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>