unpackaged/main/default/objects/CMPL123CME__Vigilance__c/fields/CMPL123CME__Accessories_or_Associated_Device__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Accessories_or_Associated_Device__c</fullName>
        <label>Accessories or Associated Device</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </CustomField>