unpackaged/main/default/objects/CMPL123CME__Vigilance__c/fields/CMPL123CME__Age_of_patient__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Age_of_patient__c</fullName>
        <label>Age of patient</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>