unpackaged/main/default/objects/CMPL123CME__Vigilance__c/fields/CMPL123CME__Age_units__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Age_units__c</fullName>
        <label>Age units</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Years</fullName>
                </value>
                <value>
                    <fullName>Months</fullName>
                </value>
                <value>
                    <fullName>Days</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>