unpackaged/main/default/objects/CMPL123CME__Vigilance__c/fields/CMPL123CME__Authorized_Representative__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Authorized_Representative__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Authorized Representative</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Vigilance1</relationshipName>
        <type>Lookup</type>
    </CustomField>