unpackaged/main/default/objects/CMPL123CME__Vigilance__c/fields/CMPL123CME__Classification_of_Incident__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Classification_of_Incident__c</fullName>
        <label>Classification of Incident</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Death</fullName>
                </value>
                <value>
                    <fullName>Unanticipated Serious Deterioration in State of Health</fullName>
                </value>
                <value>
                    <fullName>All other reportable incidents</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>