unpackaged/main/default/objects/CMPL123CME__Vigilance__c/fields/CMPL123CME__Commercial_name__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Commercial_name__c</fullName>
        <label>Commercial name</label>
        <length>250</length>
        <type>Text</type>
    </CustomField>