unpackaged/main/default/objects/CMPL123CME__Vigilance__c/fields/CMPL123CME__Device__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Device__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Device</label>
        <referenceTo>CMPL123__Device__c</referenceTo>
        <relationshipName>Vigilance</relationshipName>
        <type>Lookup</type>
    </CustomField>