unpackaged/main/default/objects/CMPL123CME__Vigilance__c/fields/CMPL123CME__Device_analysis_results__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Device_analysis_results__c</fullName>
        <label>Device analysis results</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </CustomField>