unpackaged/main/default/objects/CMPL123CME__Vigilance__c/fields/CMPL123CME__Device_Class__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Device_Class__c</fullName>
        <label>Device Class</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AIMD Active implants</fullName>
                </value>
                <value>
                    <fullName>MDD Class III</fullName>
                </value>
                <value>
                    <fullName>MDD Class IIb</fullName>
                </value>
                <value>
                    <fullName>MDD Class IIa</fullName>
                </value>
                <value>
                    <fullName>MDD Class I</fullName>
                </value>
                <value>
                    <fullName>IVD Annex II List A</fullName>
                </value>
                <value>
                    <fullName>IVD Annex II List B</fullName>
                </value>
                <value>
                    <fullName>IVD Devices for self-testing</fullName>
                </value>
                <value>
                    <fullName>IVD General</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>