unpackaged/main/default/objects/CMPL123CME__Vigilance__c/fields/CMPL123CME__Device_Current_Location__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Device_Current_Location__c</fullName>
        <label>Device Current Location</label>
        <length>250</length>
        <type>Text</type>
    </CustomField>