unpackaged/main/default/objects/CMPL123CME__Vigilance__c/fields/CMPL123CME__Duration_of_Impantation__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Duration_of_Impantation__c</fullName>
        <label>Duration of Impantation</label>
        <length>100</length>
        <type>Text</type>
    </CustomField>