unpackaged/main/default/objects/CMPL123CME__Vigilance__c/fields/CMPL123CME__Expected_date_of_next_report__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Expected_date_of_next_report__c</fullName>
        <label>Expected date of next report</label>
        <type>Date</type>
    </CustomField>