unpackaged/main/default/objects/CMPL123CME__Vigilance__c/fields/CMPL123CME__Final_comments__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Final_comments__c</fullName>
        <label>Final comments</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </CustomField>