unpackaged/main/default/objects/CMPL123CME__Vigilance__c/fields/CMPL123CME__Healthcare_facility__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Healthcare_facility__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Healthcare facility</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Vigilance2</relationshipName>
        <type>Lookup</type>
    </CustomField>