unpackaged/main/default/objects/CMPL123CME__Vigilance__c/fields/CMPL123CME__Implant_Date__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Implant_Date__c</fullName>
        <label>Implant Date</label>
        <type>Date</type>
    </CustomField>