unpackaged/main/default/objects/CMPL123CME__Vigilance__c/fields/CMPL123CME__Incident_Description__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Incident_Description__c</fullName>
        <label>Incident Description</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </CustomField>