unpackaged/main/default/objects/CMPL123CME__Vigilance__c/fields/CMPL123CME__Initial_corrective_actions__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Initial_corrective_actions__c</fullName>
        <label>Initial corrective actions</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </CustomField>