unpackaged/main/default/objects/CMPL123CME__Vigilance__c/fields/CMPL123CME__No_of_Patients_Involved__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__No_of_Patients_Involved__c</fullName>
        <label>No of Patients Involved</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>