unpackaged/main/default/objects/CMPL123CME__Vigilance__c/fields/CMPL123CME__Nomeclature__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Nomeclature__c</fullName>
        <label>Nomeclature System</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>GMDN</fullName>
                </value>
                <value>
                    <fullName>UMDNS (ECRI)</fullName>
                </value>
                <value>
                    <fullName>EDMS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>