unpackaged/main/default/objects/CMPL123CME__Vigilance__c/fields/CMPL123CME__Nomeclature_text__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Nomeclature_text__c</fullName>
        <label>Nomeclature text</label>
        <length>250</length>
        <type>Text</type>
    </CustomField>