unpackaged/main/default/objects/CMPL123CME__Vigilance__c/fields/CMPL123CME__Notified_Body_ID_Number__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Notified_Body_ID_Number__c</fullName>
        <label>Notified Body ID Number</label>
        <length>100</length>
        <type>Text</type>
    </CustomField>