unpackaged/main/default/objects/CMPL123CME__Vigilance__c/fields/CMPL123CME__Number_of_Medical_Devices_Involved__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Number_of_Medical_Devices_Involved__c</fullName>
        <label>Number of Medical Devices Involved</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>