unpackaged/main/default/objects/CMPL123CME__Vigilance__c/fields/CMPL123CME__Number_of_Similar_Incidents__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Number_of_Similar_Incidents__c</fullName>
        <label>Number of Similar Incidents</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>