unpackaged/main/default/objects/CMPL123CME__Vigilance__c/fields/CMPL123CME__Operator__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Operator__c</fullName>
        <label>Operator</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Healthcare Professional</fullName>
                </value>
                <value>
                    <fullName>Patient</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>