unpackaged/main/default/objects/CMPL123CME__Vigilance__c/fields/CMPL123CME__Other_Competent_Authority__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Other_Competent_Authority__c</fullName>
        <label>Other Competent Authority</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Germany</fullName>
                </value>
                <value>
                    <fullName>UK</fullName>
                </value>
                <value>
                    <fullName>France</fullName>
                </value>
                <value>
                    <fullName>Italy</fullName>
                </value>
                <value>
                    <fullName>USA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>