unpackaged/main/default/objects/CMPL123CME__Vigilance__c/fields/CMPL123CME__Patient_Outcome__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Patient_Outcome__c</fullName>
        <label>Patient Outcome</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </CustomField>