unpackaged/main/default/objects/CMPL123CME__Vigilance__c/fields/CMPL123CME__Preliminary_Analysis__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Preliminary_Analysis__c</fullName>
        <label>Preliminary Analysis</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </CustomField>