unpackaged/main/default/objects/CMPL123CME__Vigilance__c/fields/CMPL123CME__Public_Health_Threat__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Public_Health_Threat__c</fullName>
        <label>Public Health Threat</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>