unpackaged/main/default/objects/CMPL123CME__Vigilance__c/fields/CMPL123CME__Remedial_actions_taken__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Remedial_actions_taken__c</fullName>
        <label>Remedial actions taken</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </CustomField>