unpackaged/main/default/objects/CMPL123CME__Vigilance__c/fields/CMPL123CME__Status_of_Submitter__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Status_of_Submitter__c</fullName>
        <label>Status of Submitter</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Manufacturer</fullName>
                </value>
                <value>
                    <fullName>Authorised Representative within EEA and Switzerland</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>