unpackaged/main/default/objects/CMPL123CME__Vigilance__c/fields/CMPL123CME__Status_of_Submitter_Others__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Status_of_Submitter_Others__c</fullName>
        <label>Status of Submitter Others</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>