unpackaged/main/default/objects/CMPL123CME__Vigilance__c/fields/CMPL123CME__Type_of_Report__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Type_of_Report__c</fullName>
        <label>Type of Report</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Initial Report</fullName>
                </value>
                <value>
                    <fullName>Follow-up report</fullName>
                </value>
                <value>
                    <fullName>Combined initial and final report</fullName>
                </value>
                <value>
                    <fullName>Final report</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>