unpackaged/main/default/objects/CMPL123CME__Vigilance__c/fields/CMPL123CME__Usage_of_the_medical_device__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Usage_of_the_medical_device__c</fullName>
        <label>Usage of the medical device</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Initial use</fullName>
                </value>
                <value>
                    <fullName>Reuse of a single use medical device</fullName>
                </value>
                <value>
                    <fullName>reuse of a reusable medical device</fullName>
                </value>
                <value>
                    <fullName>re-serviced/refurbished</fullName>
                </value>
                <value>
                    <fullName>other</fullName>
                </value>
                <value>
                    <fullName>problem noted prior use</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>