unpackaged/main/default/objects/CMPL123CME__Vigilance__c/fields/CMPL123CME__User_Facility_Report_Ref_No__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__User_Facility_Report_Ref_No__c</fullName>
        <label>User Facility Report Ref No</label>
        <type>TextArea</type>
    </CustomField>