unpackaged/main/default/objects/CMPL123CME__Vigilance__c/fields/CMPL123CME__Weight_in_Kgs__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Weight_in_Kgs__c</fullName>
        <label>Weight in Kgs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </CustomField>